# irmin-rpc-rust

./: Cargo.toml  Makefile  README.md  build.rs  irmin_api.capnp
examples/: client.rs
src/: client.rs  commit.rs  error.rs  lib.rs  repo.rs  repr.rs  store.rs  tree.rs
