[package]
name = "irmin"
version = "0.1.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
capnpc = "*"

[dependencies]
thiserror = "1"
capnp = "*"
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt-multi-thread", "macros"]}
tokio-util = { version = "0.6.0", features = ["compat"] }
serde = "1"
serde_json = "1"
lru = "0.6"

[dependencies.capnp-rpc]
version = "*"
